<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="8dp"
    android:padding="8dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/example_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/experienceGuideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/experienceGuideline"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            app:layout_constraintStart_toEndOf="@+id/experienceGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/jobTitleTextView"
            android:text="@string/example_company"
            android:layout_marginStart="16dp"
            app:layout_constraintRight_toLeftOf="@+id/jobTitleTextView"
            android:textSize="16sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/companyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@+id/companyTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/example_job_title"
            android:id="@+id/jobTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            app:constraint_referenced_ids="companyTextView,jobTitleTextView"
            app:barrierDirection="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/jobDescription"
            android:layout_marginStart="8dp"
            style="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@+id/experienceGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/exmple_job_description"
            app:layout_constraintTop_toBottomOf="@+id/barrier"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
