<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="8dp"
    android:padding="8dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/example_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/educationGuideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/educationGuideline"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            app:layout_constraintStart_toEndOf="@+id/educationGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/example_faculty"
            android:layout_marginStart="8dp"
            app:layout_constraintRight_toLeftOf="@+id/universityTextView"
            android:textSize="16sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/facultyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/facultyTextView"
            app:layout_constraintStart_toEndOf="@+id/educationGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/agh_university_of_science_and_technology"
            android:id="@+id/universityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>